--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
 
   <section class="section gutter-1-4 pad-t-2">
-    <div class="wrapper max-length">
+    <div class="wrapper gutter-1-4">
 
-      <figure class="photo">
+      <figure class="photo gutter-1-4">
         <img class="img-flex" src="images/venus.jpg" alt="">
         <figcaption class="milli italic text-center">A real-colour image of Venus.</figcaption>
       </figure>
